--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body>
+<body background="https://i.postimg.cc/CLT7J2Ny/298545cd34eff4ade29132707c49b427.jpg">
     <nav class="navbar">
         <div class="navbar-container container">
             <input type="checkbox" name="" id="">
@@ -167,28 +167,74 @@
             </div>
             <div class="food-menu-item">
                 <div class="food-img">
-                    <img src="https://i.postimg.cc/Jnxc8xQt/food-menu6.jpg" alt="" />
+                    <img src="https://i.postimg.cc/D0yB7348/maxresdefault.jpg" alt="" />
                 </div>
                 <div class="food-description">
-                    <h2 class="food-titile">Food Menu Item 6</h2>
+                    <h2 class="food-titile">Food Menu Item 7</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                        quae.
+                        Omelette Pav
+                    </p>
+                    <p class="food-price">Price: &#8377; 20</p>
+                </div>
+            </div>
+            <div class="food-menu-item">
+                <div class="food-img">
+                    <img src="https://i.postimg.cc/j5NDgMx2/vada-pav-recipe-how-to-make-vada-pav-wada-pav-1-769x1024.jpg" alt="" />
+                </div>
+                <div class="food-description">
+                    <h2 class="food-titile">Food Menu Item 8</h2>
+                    <p>
+                        vada pav and kanda bhaji
                     </p>
                     <p class="food-price">Price: &#8377; 250</p>
                 </div>
             </div>
             <div class="food-menu-item">
                 <div class="food-img">
-                    <img src="https://i.postimg.cc/Jnxc8xQt/food-menu6.jpg" alt="" />
+                    <img src="https://i.postimg.cc/NM2vcnS8/mdnsxa10fomq4akl7wic.webp" alt="" />
                 </div>
                 <div class="food-description">
-                    <h2 class="food-titile">Food Menu Item 6</h2>
+                    <h2 class="food-titile">Food Menu Item 9</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                        quae.
+                        Chai and Coffee
                     </p>
-                    <p class="food-price">Price: &#8377; 250</p>
+                    <p class="food-price">Price: &#8377; 15/10</p>
+                </div>
+            </div>
+            <div class="food-menu-item">
+                <div class="food-img">
+                    <img src="https://i.postimg.cc/wBQ5fx0n/Drinks.jpg" alt="" />
+                </div>
+                <div class="food-description">
+                    <h2 class="food-titile">Food Menu Item 10</h2>
+                    <p>
+                        Cold-Drink/Juices/MilkShakes
+                    </p>
+                    <p class="food-price">Price: &#8377; DEPENDS</p>
+                </div>
+            </div>
+            <div class="food-menu-item">
+                <div class="food-img">
+                    <img src="https://i.postimg.cc/nVQHm3T9/high-on-snack-bouquet-2.jpg" alt="" />
+                </div>
+                <div class="food-description">
+                    <h2 class="food-titile">Food Menu Item 11</h2>
+                    <p>
+                        Chips and Chocolate
+                    </p>
+                    <p class="food-price">Price: &#8377; 20/10</p>
+                </div>
+            </div>
+            <div class="food-menu-item">
+                <div class="food-img">
+                    <img src="https://i.postimg.cc/xTwNHkKn/images.jpg" alt="" />
+                </div>
+                <div class="food-description">
+                    <h2 class="food-titile">Food Menu Item 12</h2>
+                    <p>
+                       Ice-cream
+                    </p>
+                    <p class="food-price">Price: &#8377; 20</p>
                 </div>
             </div>
 
