changes to background

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <section id="about">
         <div class="about-wrapper container">
             <div class="about-text">
-                <p class="small">About Us</p>
-                <h2>We've been making healthy food last for 10+ years</h2>
+                <p class="small" style="color:orangered;">About Us</p>
+                <h2 style="color:silver;">We've been making healthy food last for 10+ years</h2>
                 <p>
                     We want you to experience a wholesome diet without breaking your bank! Go back to those good old days where you can also get salubrious Juices, Smoothies and Breakfast Bowls
                 </p>
