--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="#food-menu">Menu</a></li>
                 <li><a href="#testimonials">Testimonial</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#Orders">Order</a></li>
             </ul>
             <h1 class="logo">DBCE - CANTEEN</h1>
         </div>
@@ -98,7 +99,7 @@
             </div>
             <div class="food-type grin">
                 <div class="img-container">
-                    <img src="https://i.postimg.cc/yYgfvS10/183429947-coca-cola-fanta-action-and-different-cold-drinks-for-summer-season-soft-drinks-and-energy.webp" alt="error" />
+                    <img src="https://i.postimg.cc/Xv60LMzX/istockphoto-525338134-612x612.jpg" alt="error" />
                     <div class="img-content">
                         <h3>Drinks </h3>
                         <a href="https://en.wikipedia.org/wiki/soft Drinks and candy" class="btn btn-primary" target="blank">learn
